# Living-Systems-OS

./: README.md  index.html  script.js  styles.css
frontend/: index.html  styles.css
research-backend/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
research-backend/configs/: debug_fast.yaml  default.yaml  quick_debug.yaml  smoke.yaml  test3fix.yaml  ultrafast.yaml
research-backend/data/interim/: gdc_file_metadata.tsv  gdc_manifest.clinical.tsv  gdc_manifest.core.tsv  gdc_manifest.maf.tsv  gdc_manifest.maf_ensemble.tsv  maf_test10.tsv  manifest_summary.tsv  rna_sample_sheet.tsv  rna_sample_sheet_mapped.tsv  rna_sample_sheet_mapped_egfr.tsv
research-backend/paper/: outline.md  results_summary.md
research-backend/pathways/: pathway_gene_sets.yaml
research-backend/scripts/: build_report.py  build_sample_sheet.py  check_manifest_completeness.py  download_gdc_manifest.py  prepare_phase1.py  run_pipeline.py
research-backend/src/lsos_research/: __init__.py  ablation.py  baselines.py  config.py  cv.py  data_ingest.py  evaluation.py  features.py  gdc.py  hybrid_model.py  perturbation.py  preprocessing.py  training.py  visualization.py
